// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SSR Phase 1 — basic fixtures > renders SVG and MathML (static + dynamic attrs) > MathDynamic 1`] = `
{
  "css": "",
  "html": "<math id="dyneq" display="block"><mn class="m">x</mn></math>",
}
`;

exports[`SSR Phase 1 — basic fixtures > renders SVG and MathML (static + dynamic attrs) > SvgDynamic 1`] = `
{
  "css": "",
  "html": "<svg id="dyn" viewBox="0 0 100 100" class="c"><rect x="0" y="0" width="30" height="20" fill="blue"></rect></svg>",
}
`;

exports[`SSR Phase 1 — basic fixtures > renders SVG and MathML (static + dynamic attrs) > SvgStatic 1`] = `
{
  "css": "",
  "html": "<svg id="chart" viewBox="0 0 100 100" class="chart"><circle cx="50" cy="50" r="40" fill="red"></circle><g class="labels"><text x="50" y="55">hi</text></g></svg>",
}
`;

exports[`SSR Phase 1 — basic fixtures > renders static markup, dynamic text, and attributes > Counter 1`] = `
{
  "css": "",
  "html": "<span>5</span>",
}
`;

exports[`SSR Phase 1 — basic fixtures > renders static markup, dynamic text, and attributes > Greet 1`] = `
{
  "css": "",
  "html": "<p>Hello, <!--[-->Ada<!--]--> !</p>",
}
`;

exports[`SSR Phase 1 — basic fixtures > renders static markup, dynamic text, and attributes > Hello 1`] = `
{
  "css": "",
  "html": "<div class="greet">Hello, world</div>",
}
`;

exports[`SSR Phase 1 — basic fixtures > renders static markup, dynamic text, and attributes > Mixed 1`] = `
{
  "css": "",
  "html": "<div id="m"><span class="a">A</span><span class="b">B</span></div>",
}
`;

exports[`SSR Phase 1 — ssr fixture (style / spread / innerHTML / components / hooks / css) > collects scoped CSS into the css field > Scoped 1`] = `
{
  "css": "<style data-octane="tsrx-44401a04">
			.box.tsrx-44401a04 {
				color: red;
			}
		</style>",
  "html": "<div class="box tsrx-44401a04">scoped</div>",
}
`;

exports[`SSR Phase 1 — ssr fixture (style / spread / innerHTML / components / hooks / css) > emits innerHTML raw (unescaped) > Raw 1`] = `
{
  "css": "",
  "html": "<div><b>bold</b></div>",
}
`;

exports[`SSR Phase 1 — ssr fixture (style / spread / innerHTML / components / hooks / css) > renders boolean attributes, void elements, and dynamic attrs > Field-disabled 1`] = `
{
  "css": "",
  "html": "<label><input type="text" name="q" value="v" disabled=""/></label>",
}
`;

exports[`SSR Phase 1 — ssr fixture (style / spread / innerHTML / components / hooks / css) > renders boolean attributes, void elements, and dynamic attrs > Field-enabled 1`] = `
{
  "css": "",
  "html": "<label><input type="text" name="q" value="v"/></label>",
}
`;

exports[`SSR Phase 1 — ssr fixture (style / spread / innerHTML / components / hooks / css) > renders dynamic object style with camelCase keys > Styled 1`] = `
{
  "css": "",
  "html": "<div class="a" style="color:red;font-size:12px;">hi</div>",
}
`;

exports[`SSR Phase 1 — ssr fixture (style / spread / innerHTML / components / hooks / css) > renders nested component composition > Card 1`] = `
{
  "css": "",
  "html": "<article class="card"><h2>T</h2><!--[--><em class="badge">new</em><!--]--></article>",
}
`;

exports[`SSR Phase 1 — ssr fixture (style / spread / innerHTML / components / hooks / css) > serializes spread attributes > Spread 1`] = `
{
  "css": "",
  "html": "<div id="x" data-k="1" class="base">x</div>",
}
`;
